# sparklinkAI

./: .env.example  .gitignore  Dockerfile  README.md  celery_worker.py  check_tables.py  delete_remaining_tables.py  docker-compose.yml  dump.rdb  main.py  mineru_test_result.md  pyproject.toml  reset_database.py  test_embedding_process.py  test_knowledge_system.py  test_mineru.py  test_vector_insert.py  test_vector_search.py
api/: chat.py  knowledge_base.py  system.py
config/: conf.ini
core/: __init__.py  config.py  database.py  shared_state.py
docker/: docker-compose.yml
docs/: MINERU_INTEGRATION.md
models/: __init__.py  database.py  enums.py  schemas.py
services/: celery_app.py  chat_service.py  document_service.py  embedding_service.py  knowledge_service.py  rerank_service.py  search_service.py  vector_service.py
services/tasks/: __init__.py  document_tasks.py  embedding_tasks.py  search_tasks.py
static/css/: chat.css  common.css  knowledge.css  style.css
static/js/: app.js  chat.js  knowledge.js  utils.js
templates/: base.html  chat.html  index.html  knowledge.html
templates/modals/: common_modals.html
utils/: extract_keyword.py  pocketflow.py  user_utils.py
